add portofolio feature + refactorings